--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="icon" href='../src//assets/logo.png' />
+    <link rel="icon" href='./icon-192x192.png' />
+    <link rel="apple-touch-icon" href="./icon-192x192.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="./icon-192x192.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="./icon-192x192.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./icon-192x192.png">
     <link rel="manifest" href="./manifest.json" />
     
     <link
