--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="icon" href='./icon-192x192.png' />
-    <link rel="apple-touch-icon" href="./icon-192x192.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="./icon-192x192.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="./icon-192x192.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="./icon-192x192.png">
+
+    <link rel="icon" href="./icon-192x192.png" />
+    <link rel="apple-touch-icon" href="./icon-192x192.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="./icon-192x192.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="./icon-192x192.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./icon-192x192.png" />
     <link rel="manifest" href="./manifest.json" />
-    
+
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;800;900&display=swap"
       rel="stylesheet"
